--- a/addons/ThemeExport.plugin/static/app.css
+++ b/addons/ThemeExport.plugin/static/app.css
@@ -14,13 +14,14 @@
   color: black;
   margin-right: 20px;
   padding: 5px 12px 5px 7px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  background-color: #ccc;
 }
 #steps li.active {
   background-color: #336699;
   color: white;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
 }
 #steps li span {
   color: white;
@@ -71,6 +72,7 @@
   border: 1px solid black;
   color: #222;
   font-family: monospace;
+  font-size: 1em;
   width: 588px;
   height: 310px;
   padding: 5px 10px;
