--- a/addons/ThemeExport.plugin/tmpl/dialog_export.tmpl
+++ b/addons/ThemeExport.plugin/tmpl/dialog_export.tmpl
@@ -27,17 +27,47 @@
                 'designer_link'     : $('#designer-url-field input').val()
             },
             success: function(text, textStatus, XMLHttpRequest) {
-              var matches = text.match(/JSON:(.*)$/);
-              if (matches && matches.length) {
-                var json = matches[1];
-                var data = eval( '(' + json + ')' );
-                $('#export-pane .progress').fadeOut( function() { $(this).html('<a href="'+data.download_url+'" title="Download Theme">Download '+data.zipfilename+'</a>').fadeIn() });;
-              }
+                var matches = text.split(/JSON:/);
+                if (matches && matches.length) {
+                    
+                    // Add the status message to the export log area.
+                    text = matches[0].replace(/\r?\n$/, '');
+                    var lines = text.split(/\r?\n/);
+                    var last_line;
+                    for (var i = 0; i < lines.length; i++) {
+                        var line = lines[i];
+                        var h = $('#export-log ul').append('<li>' + line + '</li>').height();
+                        $('#export-log').scrollTo( 'max' , { 'axis' : 'y' });
+                    }
+
+                    // Successfully exported!
+                    var json = matches[1];
+                    if (json) {
+                        var data = eval( '(' + json + ')' );
+                        $('#export-pane .progress').fadeOut( function() {
+                            if (data.error) {
+                                $(this).html('<p>'+data.error+'</p>').fadeIn();
+                            }
+                            else {
+                                // Add the download button
+                                $(this).html('<a href="'+data.download_url+'" title="Download Theme">Download '+data.zipfilename+'</a>').fadeIn();
+
+                                // Remove the export button, and change "Cancel" 
+                                // to "Close."
+                                $('button#continue').fadeOut();
+                                $('button#close').text('Close');
+                            }
+                        });
+                    }
+                }
+
             }
         });
+        // Doesn't seem to do anything.
         xhr.onreadystatechange = function() {
+          alert('test');
           if ( xhr.readyState == 3 ) {
-            interactive_export( xhr );            
+            interactive_export( xhr );
           }
         };
 
@@ -56,7 +86,7 @@
 
     <ol id="steps" class="pkg">
       <li class="page-1 general active" pageid="1"><label>General Information</label></li>
-      <li class="page-2 pricing" pageid="2"><label>Designer Details</label></li>
+      <li class="page-2" pageid="2"><label>Designer Details</label></li>
     </ol>
 
     <fieldset id="page-1" class="page first details">
@@ -110,11 +140,10 @@
     <div id="export-pane">
       <div id="export-log">
         <ul>
+            <li>Exporting...</li>
         </ul>
       </div>
-      <div class="progress">
-        <p class="working">Exporting...</p>
-      </div>
+      <div class="progress"></div>
     </div>
 
     <div class="actions-bar">
