* Export Custom Fields * Export Field Day fields * Export/don't export system-level Custom Fields and/or system-level Field Day fields. * Minor restyling * Bumped to version 1.2

--- a/addons/ThemeExport.plugin/static/app.css
+++ b/addons/ThemeExport.plugin/static/app.css
@@ -41,6 +41,12 @@
 #steps li span,
 #steps li label { cursor: pointer; }
 
+input[type=text] {
+    border: 1px solid #ccc;
+    padding: 3px;
+    width: 600px;
+}
+
 #export-pane {
   display: none;
   float: none;
