--- a/addons/ThemeExport.plugin/tmpl/dialog_export.tmpl
+++ b/addons/ThemeExport.plugin/tmpl/dialog_export.tmpl
@@ -23,6 +23,8 @@
                 'theme_name'        : $('#name-field input').val(),
                 'theme_description' : $('#description-field textarea').val(),
                 'theme_version'     : $('#version-field input').val(),
+                'system_cf'         : $('#system_cf-field input').is(':checked') ? 1 : 0,
+                'system_fd'         : $('#system_fd-field input').is(':checked') ? 1 : 0,
                 'designer_name'     : $('#designer-field input').val(),
                 'designer_link'     : $('#designer-url-field input').val()
             },
@@ -33,21 +35,29 @@
                     // Successfully exported!
                     var json = matches[1];
                     if (json) {
+
                         var data = eval( '(' + json + ')' );
                         if (data.error) {
-                            $('#export-pane .progress').html('<p>'+data.error+'</p>');
+                            $('#export-pane .progress').html(
+                                '<p>' + data.error + '</p>'
+                            );
                         }
                         else {
                             // Add the download button
                             $('#export-pane .progress').html(
-                                '<a href="'+data.download_url+'" title="Download Theme">Download '+data.zipfilename+'</a>'
+                                '<p><a href="' + data.download_url
+                                + '" title="Download Theme">Download ' 
+                                + data.zipfilename + '</a></p>'
                             );
-
-                            // Remove the export button, and change "Cancel" 
-                            // to "Close."
-                            $('button#continue').hide();
-                            $('button#close').text('Close');
                         }
+
+                        // After the log is finished, show the result.
+                        $('#export-pane .progress').show();
+
+                        // Remove the export button, and change "Cancel" 
+                        // to "Close."
+                        $('button#continue').hide();
+                        $('button#close').text('Close');
                     }
                 }
 
@@ -80,29 +90,51 @@
 
     <fieldset id="page-1" class="page first details">
 
-      <mtapp:setting
-          id="name"
-          label_class="top-label"
-          label="<__trans phrase="Theme Name">"
-          hint="The name of your theme."
-          show_hint="0">
-        <input class="full-width" name="theme_name" type="text" size="60" value="<$mt:var name="theme_name"$>" />
-      </mtapp:setting>
+        <mtapp:setting
+            id="name"
+            label_class="top-label"
+            label="<__trans phrase="Theme Name">"
+            hint="The name of your theme."
+            show_hint="0">
+            <input class="full-width" name="theme_name" type="text" value="<$mt:var name="theme_name"$>" />
+        </mtapp:setting>
 
-      <mtapp:setting
-          id="description"
-          label_class="top-label"
-          label="<__trans phrase="Description">">
-        <textarea class="full-width" rows="3" name="description"><$mt:var name="theme_description"$></textarea>
-      </mtapp:setting>
+        <mtapp:setting
+            id="description"
+            label_class="top-label"
+            label="<__trans phrase="Description">">
+            <textarea class="full-width" rows="3" name="description"><$mt:var name="theme_description"$></textarea>
+        </mtapp:setting>
 
-      <mtapp:setting
-          id="version"
-          label_class="top-label"
-          label="<__trans phrase="Version">"
-          show_hint="0">
-        <input name="theme_version" type="text" size="20" value="<$mt:var name="theme_version"$>" />
-      </mtapp:setting>
+        <mtapp:setting
+            id="version"
+            label_class="top-label"
+            label="<__trans phrase="Version">"
+            show_hint="0">
+            <input class="full-width" name="theme_version" type="text" value="<$mt:var name="theme_version"$>" />
+        </mtapp:setting>
+
+    <mt:If name="system_cf">
+        <mtapp:setting
+            id="system_cf"
+            label_class="top-label"
+            label="<__trans phrase="Export system-level Custom Fields">"
+            show_hint="0">
+            <input name="system_cf" id="system_cf" type="checkbox" value="<mt:Var name="system_cf">" checked="checked" />
+            <label for="system_cf">Export system-level Custom Fields. (Uncheck if they are not required for this theme or if they are part of another theme.)</label>
+        </mtapp:setting>
+    </mt:If>
+
+    <mt:If name="system_fd">
+        <mtapp:setting
+            id="system_fd"
+            label_class="top-label"
+            label="<__trans phrase="Export system-level Field Day fields">"
+            show_hint="0">
+            <input name="system_fd" id="system_fd" type="checkbox" value="<mt:Var name="system_fd">" checked="checked" />
+            <label for="system_fd">Export system-level Field Day fields. (Uncheck if they are not required for this theme or if they are part of another theme.)</label>
+        </mtapp:setting>
+    </mt:If>
 
     </fieldset>
 
@@ -111,17 +143,17 @@
       <mtapp:setting
           id="designer"
           label_class="top-label"
-          label="<__trans phrase="Designer Name">"
+          label="<__trans phrase="Designer/Author Name">"
           show_hint="0">
-        <input class="full-width" name="designer_name" type="text" size="20" value="<$mt:var name="designer_name"$>" />
+        <input class="full-width" name="designer_name" type="text" value="<$mt:var name="designer_name"$>" />
       </mtapp:setting>
 
       <mtapp:setting
           id="designer-url"
           label_class="top-label"
-          label="<__trans phrase="Designer URL">"
+          label="<__trans phrase="Designer/Author URL">"
           show_hint="0">
-        <input class="full-width" name="designer_link" type="text" size="20" value="<$mt:var name="designer_url"$>" />
+        <input class="full-width" name="designer_link" type="text" value="<$mt:var name="designer_url"$>" />
       </mtapp:setting>
 
     </fieldset>
